# TuneScout

./: .env.example  README.md  alembic.ini  check_spotify_data.py  compose.yaml  debug_mock_csv.py  debug_popularity.py  debug_spotify_api.py  debug_spotify_csv.py  debug_sync.py  get_related_artists.py  main.py  pyproject.toml  spotify_data_sample.json  supabase_email_confirmation_fix.sql  supabase_schema.sql  supabase_setup.sql  test.db  test_album_popularity.py  test_genre_debug.py  test_minor_artists.py  test_search_debug.py  test_simple.py  test_supabase_connection.html  test_sync.py  test_sync_adjusted.py  test_sync_manual.py
apps/api/: main.py
apps/api/routers/: artists.py  auth.py  recommendations.py  webhooks.py
apps/etl/: pipeline.py  scheduler.py
apps/etl/sources/: spotify.py
apps/etl/tasks/: sync_yesterday_artists.py
dev_tools/: README.md  spotify_artist_analyzer.py  spotify_artists.csv
docker/: api.Dockerfile
migrations/: env.py
migrations/versions/: 531eca9ce869_initial_migration.py
templates/: artist_detail.html  auth.html  auth_simple.html  dashboard.html  index.html  test_supabase.html
