[project]
name = "tunescout"
version = "0.1.0"
description = "Music discovery recommendation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "sentence-transformers>=2.2.0",
    "pgvector>=0.2.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "sendgrid>=6.10.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "supabase>=2.0.0",
    "email-validator>=2.2.0",
    "spotipy>=2.25.1",
    "schedule>=1.2.0",
]
